--- a/ossible-web/index.html
+++ b/ossible-web/index.html
@@ -30,11 +30,10 @@
 			<dl class="list">
 				<dt class="main-text main-text-small">0 $BTC</dt>
 				<dd class="list-item">
-					<a class="list-link"
-						href="https://btc.com/btc/address/1BtcNPdErL7HzZgmQHLocCR6VSeopyx2QB"
+					<a class="list-link" href="https://btc.com/btc/address/1BtcNPdErL7HzZgmQHLocCR6VSeopyx2QB"
 						target="_blank">Click here</a>
 				</dd>
-				<dt class="main-text main-text-small">5 Sheep - Welcome the first baby Sheep (Lamb)</dt>
+				<dt class="main-text main-text-small">5 Sheep</dt>
 				<dd class="list-item">
 					<a class="list-link" href="#" target="_blank">Click here</a>
 				</dd>
